; ModuleID = '/home/carl/AnghaBench/linux/drivers/iommu/extr_arm-smmu.c_arm_smmu_rpm_put.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iommu/extr_arm-smmu.c_arm_smmu_rpm_put.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.arm_smmu_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.arm_smmu_device*)* @arm_smmu_rpm_put to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @arm_smmu_rpm_put(%struct.arm_smmu_device* %0) #0 {
  %2 = alloca %struct.arm_smmu_device*, align 8
  store %struct.arm_smmu_device* %0, %struct.arm_smmu_device** %2, align 8
  %3 = load %struct.arm_smmu_device*, %struct.arm_smmu_device** %2, align 8
  %4 = getelementptr inbounds %struct.arm_smmu_device, %struct.arm_smmu_device* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = call i64 @pm_runtime_enabled(i32 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %13

8:                                                ; preds = %1
  %9 = load %struct.arm_smmu_device*, %struct.arm_smmu_device** %2, align 8
  %10 = getelementptr inbounds %struct.arm_smmu_device, %struct.arm_smmu_device* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @pm_runtime_put(i32 %11)
  br label %13

13:                                               ; preds = %8, %1
  ret void
}

declare dso_local i64 @pm_runtime_enabled(i32) #1

declare dso_local i32 @pm_runtime_put(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
